--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,12 @@
     	<input type="submit" value="Save" />
     </form>
 
+    <h1>Last available product: </h1>
+    
+    <div id="last-product">
+
+    </div>    
+
     <script src="/javascripts/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
 
@@ -20,6 +26,14 @@
     	$(function(){
 
     		var socket = io.connect(document.URL);
+
+            socket.on("new-product-available", function(product){
+                console.log("there is a new product available");
+                console.log(product);
+
+                var content = product.name + " for " + product.price;
+                $("#last-product").html(content);
+            });
 
     		$("#new-product").submit(function(event){
     			var name = $("#name").val();
